// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validate-document-type should handle invalid document type model 1`] = `
{
  "content": [
    {
      "text": "{"type":"https://tools.ietf.org/html/rfc9110#section-15.5.1","title":"One or more validation errors occurred.","status":400,"errors":[{"$.icon":["The Icon field is required."]},{"$.name":["The Name field is required."]},{"$.alias":["The Alias field is required."]}],"traceId":"normalized-trace-id"}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;

exports[`validate-document-type should validate a valid document type 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;
